# OpenixCLI

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
cross/: Dockerfile.aarch64  Dockerfile.arm  Dockerfile.riscv64  Dockerfile.x86_64
scripts/: build-macos.sh  build-rpm.js  build-windows.ps1
src/: cli.rs  lib.rs  main.rs
src/commands/: flash.rs  mod.rs  scan.rs  types.rs
src/config/: boot_header.rs  mbr_parser.rs  mod.rs  partition.rs  sys_config.rs
src/firmware/: image_data.rs  mod.rs  packer.rs  sparse.rs  types.rs
src/flash/: fel_handler.rs  fes_handler.rs  mod.rs  progress.rs  types.rs
src/flash/fel_handler/: dram_init.rs  mod.rs  uboot_download.rs
src/flash/fes_handler/: boot_download.rs  constants.rs  erase_flag.rs  mbr_download.rs  mod.rs  types.rs  ubifs_config.rs
src/flash/fes_handler/partition/: mod.rs  mod_impl.rs  raw_download.rs  sparse_parser.rs
src/process/: global_progress.rs  mod.rs  reporter.rs  stages.rs
src/tui/: app.rs  bridge.rs  event.rs  mod.rs  ui.rs
src/tui/widgets/: device_list.rs  firmware_info.rs  log_view.rs  mod.rs  progress.rs
src/utils/: error.rs  logger.rs  mod.rs  terminal.rs
